--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -38,7 +38,7 @@
         </div>
     </nav> -->
 
-    <div class="enTeteUsers">
+    <div class="enteteAtelier">
         <div class="ensembleRecherche">
             <div class="rechercherPar">Rechercher par</div>
             <input type="text" id="recherche" placeholder="Rechercher..."></textarea>
@@ -46,12 +46,13 @@
         </div>
     </div>
 
-    <div class="listeUsers">
-        <div class="rangeeUser">
+    <div class="listeAtelier">
+        <div class="rangeeAtelier">
             <div class="infoAtelier">
-                <div class="dataUser">Titre de l'atelier</div>
-                <div class="dataUser">Date et lieu ou lien</div>
-                <div class="dataUser">Description :</div>
+                <img class="imgAtelier" src="/images/atelierEx.png" alt="">
+                <div class="dataAtelier">Titre de l'atelier</div>
+                <div class="dataAtelier">Date et lieu ou lien</div>
+                <div class="dataAtelier">Description :</div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -60,11 +61,12 @@
             </div>
         </div>   
         
-        <div class="rangeeUser">
+        <div class="rangeeAtelier">
             <div class="infoAtelier">
-                <div class="dataUser">Titre de l'atelier</div>
-                <div class="dataUser">Date et lieu ou lien</div>
-                <div class="dataUser">Description :</div>
+                <img class="imgAtelier" src="/images/atelierEx.png" alt="">
+                <div class="dataAtelier">Titre de l'atelier</div>
+                <div class="dataAtelier">Date et lieu ou lien</div>
+                <div class="dataAtelier">Description :</div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -73,11 +75,12 @@
             </div>
         </div>   
         
-        <div class="rangeeUser">
+        <div class="rangeeAtelier">
             <div class="infoAtelier">
-                <div class="dataUser">Titre de l'atelier</div>
-                <div class="dataUser">Date et lieu ou lien</div>
-                <div class="dataUser">Description :</div>
+                <img class="imgAtelier" src="/images/atelierEx.png" alt="">
+                <div class="dataAtelier">Titre de l'atelier</div>
+                <div class="dataAtelier">Date et lieu ou lien</div>
+                <div class="dataAtelier">Description :</div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -86,11 +89,12 @@
             </div>
         </div>   
         
-        <div class="rangeeUser">
+        <div class="rangeeAtelier">
             <div class="infoAtelier">
-                <div class="dataUser">Titre de l'atelier</div>
-                <div class="dataUser">Date et lieu ou lien</div>
-                <div class="dataUser">Description :</div>
+                <img class="imgAtelier" src="/images/atelierEx.png" alt="">
+                <div class="dataAtelier">Titre de l'atelier</div>
+                <div class="dataAtelier">Date et lieu ou lien</div>
+                <div class="dataAtelier">Description :</div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
