--- a/views/adminUserGestion.ejs
+++ b/views/adminUserGestion.ejs
@@ -8,6 +8,7 @@
     <link rel="icon" href="/images/Logo1.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/headerNav.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <%- include('partials/header') %>
@@ -57,10 +58,7 @@
         </div>   
     </div>
     <%- include('partials/footer') %>
- <script src="/javascript/accessibility.js"></script>
+    <script src="/javascript/accessibility.js"></script>
     <script src="/javascript/adminUserGestion.js"></script>
-    
->>>>>>> a94e528a45ff3fcfd8180452cbd11938da4907d1
 </body>
-<%- include('partials/footer') %>
 </html>
