--- a/views/admin-article.ejs
+++ b/views/admin-article.ejs
@@ -6,6 +6,7 @@
     <title>Publication article</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
      <link rel="stylesheet" href="/css/admin-article.css">
+    <link rel="stylesheet" href="/css/footer.css">
 
 </head>
 <body>
@@ -43,9 +44,9 @@
             <div id="cancel-help" class="sr-only">Annuler toutes les modifications</div>
     <script src="/javascript/accessibility.js"></script>
 
-
+<%- include ("partials/footer") %>
     <script src="/javascript/adminArticlePage.js"></script>
-    <%- include ("partials/footer") %>
+    
 </body>
-<%- include('partials/footer') %>
+
 </html>
