--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -8,7 +8,7 @@
     <link rel="icon" href="/images/Logo1.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/headerNav.css">
-    <link rel="stylesheet" href="/css/headerNav.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <%- include('partials/header') %>
