--- a/views/newsletter-page.ejs
+++ b/views/newsletter-page.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    
     <link rel="stylesheet" href="/css/headerNav.css">
+    <link rel="stylesheet" href="/css/styleNewLetterDeroulant.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <div class="live-region" aria-live="polite" aria-atomic="true" id="announcements"></div>
