ajout adminAtelierGestion à index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
             <li style="margin:1em 0;"><a href="/newsletter-page" class="dashboard-link">Envoi d'une newsletter</a></li>
             <li style="margin:1em 0;"><a href="/admin-article" class="dashboard-link">Publication d'article</a></li>
             <li style="margin:1em 0;"><a href="/adminUserGestion" class="dashboard-link">Gestion des utilisateurs</a></li>
+            <li style="margin:1em 0;"><a href="/adminAtelierGestion" class="dashboard-link">Gestion des ateliers</a></li>
        
 </body>
 </html>
