adminAtelierGestion modif rech par titre date et lieu

--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -17,9 +17,11 @@
 
     <div class="enteteAtelier">
         <div class="ensembleRecherche">
-            <div class="rechercherPar">Rechercher par</div>
-            <input type="text" id="recherche" placeholder="Rechercher..."></textarea>
-            <img class="loupe" src="/public/images/loupe.png" alt="Image d'une loupe">
+            <div class="rechercherPar">Rechercher </div>
+            <input type="text" id="recherche" placeholder="par titre..."></textarea>
+            <input type="text" id="recherche" placeholder="par date..."></textarea>
+            <input type="text" id="recherche" placeholder="par lieu..."></textarea>
+            <img class="loupe" src="/images/loupe.png" alt="Image d'une loupe">
         </div>
     </div>
 
