css adminGestionAtelier fait, remplacement Logo1 par logo1

--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/adminAtelierGestion.css"/>
-    <link rel="icon" href="/images/Logo1.png">
+    <link rel="icon" href="/images/logo1.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/headerNav.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -29,9 +29,11 @@
         <div class="rangeeAtelier">
             <div class="infoAtelier">
                 <img class="imgAtelier" src="/images/atelierEx.png" alt="">
-                <div class="dataAtelier">Titre de l'atelier</div>
-                <div class="dataAtelier">Date et lieu ou lien</div>
-                <div class="dataAtelier">Description :</div>
+                <div class="dataContainer">
+                    <div class="dataAtelier">Titre :</div>
+                    <div class="dataAtelier">Date et lieu</div>
+                    <div class="dataAtelier">Description :</div>
+                </div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -43,9 +45,11 @@
         <div class="rangeeAtelier">
             <div class="infoAtelier">
                 <img class="imgAtelier" src="/images/atelierEx.png" alt="">
-                <div class="dataAtelier">Titre de l'atelier</div>
-                <div class="dataAtelier">Date et lieu ou lien</div>
-                <div class="dataAtelier">Description :</div>
+                <div class="dataContainer">
+                    <div class="dataAtelier">Titre :</div>
+                    <div class="dataAtelier">Date et lieu</div>
+                    <div class="dataAtelier">Description :</div>
+                </div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -57,9 +61,11 @@
         <div class="rangeeAtelier">
             <div class="infoAtelier">
                 <img class="imgAtelier" src="/images/atelierEx.png" alt="">
-                <div class="dataAtelier">Titre de l'atelier</div>
-                <div class="dataAtelier">Date et lieu ou lien</div>
-                <div class="dataAtelier">Description :</div>
+                <div class="dataContainer">
+                    <div class="dataAtelier">Titre :</div>
+                    <div class="dataAtelier">Date et lieu</div>
+                    <div class="dataAtelier">Description :</div>
+                </div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
@@ -71,9 +77,11 @@
         <div class="rangeeAtelier">
             <div class="infoAtelier">
                 <img class="imgAtelier" src="/images/atelierEx.png" alt="">
-                <div class="dataAtelier">Titre de l'atelier</div>
-                <div class="dataAtelier">Date et lieu ou lien</div>
-                <div class="dataAtelier">Description :</div>
+                <div class="dataContainer">
+                    <div class="dataAtelier">Titre :</div>
+                    <div class="dataAtelier">Date et lieu</div>
+                    <div class="dataAtelier">Description :</div>
+                </div>
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
