--- a/views/adminUserGestion.ejs
+++ b/views/adminUserGestion.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/adminUserGestion.css"/>
-    <link rel="icon" href="/images/Logo1.png">
+    <link rel="icon" href="/images/logo1.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/headerNav.css">
     <link rel="stylesheet" href="/css/footer.css">
