--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -37,7 +37,7 @@
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
-                <button id="boutonParticipants">Participants</button>
+                <button class="boutonParticipants">Participants</button>
                 <button class="boutonSupprimer">Desactiver</button>
             </div>
         </div>   
@@ -53,7 +53,7 @@
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
-                <button id="boutonParticipants">Participants</button>
+                <button class="boutonParticipants">Participants</button>
                 <button class="boutonSupprimer">Desactiver</button>
             </div>
         </div>   
@@ -69,7 +69,7 @@
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
-                <button id="boutonParticipants"">Participants</button>
+                <button class="boutonParticipants"">Participants</button>
                 <button class="boutonSupprimer">Desactiver</button>
             </div>
         </div>   
@@ -85,7 +85,7 @@
             </div>
             <div class="boutonsActions">
                 <button class="boutonEditer">Editer</button>
-                <button id="boutonParticipants">Participants</button>
+                <button class="boutonParticipants">Participants</button>
                 <button class="boutonSupprimer">Desactiver</button>
             </div>
         </div>   
