header ejs titre terminé

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="header-container">
         <div class="header-title">
             <img src="/images/Logo1.png" class="logo" alt="L'image représente une icône stylisée d'un ordinateur portable avec une grande flèche de curseur affichée sur l'écran sur fond bleu clair">
-            <h1>Envoi de la newsletter</h1>
+            <h1><%= title %></h1>
         </div>
         <div class="header-buttons" role="group" aria-label="Actions principales">
             <button type="button" aria-label="Voir le profil utilisateur">Profil</button>
