--- a/views/creeAtelier.ejs
+++ b/views/creeAtelier.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Créer un atelier</title>
+    <title><%= title %></title>
   <link rel="stylesheet" href="css/creeAtelier.css" />
   <link rel="icon" href="images/Logo1.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -17,6 +17,8 @@
   </style>
 </head>
 <body>
+      <%- include('partials/header') %>
+    <%- include('partials/nav-bar') %>
  <div id="announcements" aria-live="polite" class="sr-only"></div>
   <header>
     <h1>Créer un atelier</h1>
@@ -71,6 +73,7 @@
       </form>
     </section>
   </main>
+    <%- include('partials/footer') %>
   <script src="javascript/accessibility.js" defer></script>
 </body>
 </html>
