--- a/views/tableauDeBord.ejs
+++ b/views/tableauDeBord.ejs
@@ -43,9 +43,9 @@
         <li><a href="#">Ateliers</a></li>
         <li><a href="#">Historique</a></li>
         <li><a href="#">Utilisateurs</a></li>
-        <li><a href="creeAtelier.html">Créer un atelier</a></li>
-        <li><a href="publicationArticle.html">Articles</a></li>
-        <li><a href="newletter.html">Newsletter</a></li>
+        <li><a href="creeAtelier.ejs">Créer un atelier</a></li>
+        <li><a href="publicationArticle.ejs">Articles</a></li>
+        <li><a href="newsletter-page.ejs">Newsletter</a></li>
         <li><a class="active" href="tableauDeBord.html">Tableau de bord</a></li>
       </ul>
     </div>
