--- a/views/tableauDeBord.ejs
+++ b/views/tableauDeBord.ejs
@@ -46,7 +46,7 @@
         <li><a href="creeAtelier.ejs">Créer un atelier</a></li>
         <li><a href="publicationArticle.ejs">Articles</a></li>
         <li><a href="newsletter-page.ejs">Newsletter</a></li>
-        <li><a class="active" href="tableauDeBord.html">Tableau de bord</a></li>
+        <li><a class="active" href="tableauDeBord.ejs">Tableau de bord</a></li>
       </ul>
     </div>
   </nav>
