--- a/views/admin-article.ejs
+++ b/views/admin-article.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publication article</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+     <link rel="stylesheet" href="/css/headerNav.css">
      <link rel="stylesheet" href="/css/admin-article.css">
     <link rel="stylesheet" href="/css/footer.css">
 
