--- a/views/adminArticle.ejs
+++ b/views/adminArticle.ejs
@@ -6,7 +6,7 @@
     <title>Publication article</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
      <link rel="stylesheet" href="/css/headerNav.css">
-     <link rel="stylesheet" href="/css/admin-article.css">
+     <link rel="stylesheet" href="/css/adminArticle.css">
     <link rel="stylesheet" href="/css/footer.css">
 
 </head>
