--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -1,10 +1,10 @@
   
     <nav aria-label="Menu principal">
-        <a href="#" aria-label="Voir les ateliers disponibles">Ateliers</a>
+        <a href="adminAtelierGestion" aria-label="Voir les ateliers disponibles">Ateliers</a>
         <a href="#" aria-label="Consulter l'historique">Historique</a>
-        <a href="#" aria-label="Gérer les utilisateurs">Gestion utilisateurs</a>
-        <a href="#" aria-label="Créer un nouvel atelier">Création d'atelier</a>
-        <a href="#" aria-label="Publication d'article ">Publication d'article</a>
-        <a href="#" aria-label="Envoyer la newsletter">Envoyer newsletter</a>
-        <a href="#" aria-label="Voir le tableau de bord">Tableau de bord</a>
+        <a href="/adminUserGestion" aria-label="Gérer les utilisateurs">Gestion utilisateurs</a>
+        <a href="/creeAtelier" aria-label="Créer un nouvel atelier">Création d'atelier</a>
+        <a href="/PublicationArticle" aria-label="Publication d'article ">Publication d'article</a>
+        <a href="/newsletterPage" aria-label="Envoyer la newsletter">Envoyer newsletter</a>
+        <a href="/" aria-label="Voir le tableau de bord">Tableau de bord</a>
     </nav>
