--- a/public/css/styleNewLetterDeroulant.css
+++ b/public/css/styleNewLetterDeroulant.css
@@ -524,3 +524,57 @@ select option:focus {
     color: #000 !important;
     font-weight: bold !important;
 }
+
+/* css pour joindre un ficher*/
+
+.upload-container {
+  background: #fff;
+  border-radius: 8px;
+  margin: 10px 0 20px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+}
+
+.upload-title {
+  font-size: 15px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+.drop-zone {
+  border: 2px dashed #ccc;
+  border-radius: 6px;
+  background-color: #fafafa;
+  padding: 15px 0;
+  text-align: center;
+  cursor: pointer;
+  transition: border 0.3s ease;
+}
+
+.drop-zone:hover {
+  border-color: #888;
+}
+
+.drop-zone img {
+  width: 40px;
+  margin-bottom: 10px;
+}
+
+.drop-zone p {
+  margin: 4px 0;
+  font-size: 14px;
+  color: #555;
+}
+
+.drop-zone a {
+  color: #007BFF;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.drop-zone a:hover {
+  text-decoration: underline;
+}
+
+input[type="file"] {
+  display: none;
+}
