--- a/views/adminUserGestion.ejs
+++ b/views/adminUserGestion.ejs
@@ -13,50 +13,54 @@
 <body>
     <%- include('partials/header') %>
     <%- include('partials/nav-bar') %>
-    <div class="enTeteUsers">
-        <div class="label">Nom :</div>
-        <div class="label">Prénom :</div>
-        <div class="label">E-mail :</div>
-        <div class="label">Rôle :</div>
-        <div class="ensembleRecherche">
-            <input type="text" id="recherche" placeholder="Rechercher...">
-            <img class="loupe" src="/images/loupe.png" alt="Image d'une loupe">
+    
+    <main>
+        <div class="enTeteUsers">
+            <div class="label">Nom :</div>
+            <div class="label">Prénom :</div>
+            <div class="label">E-mail :</div>
+            <div class="label">Rôle :</div>
+            <div class="ensembleRecherche">
+                <input type="text" id="recherche" placeholder="Rechercher...">
+                <img class="loupe" src="/images/loupe.png" alt="Image d'une loupe">
+            </div>
         </div>
-    </div>
-    <div class="listeUsers">
-        <div class="rangeeUser">
-            <div class="dataUser">Gae</div>
-            <div class="dataUser">Tan</div>
-            <div class="dataUser">blabla@gmail.com</div>
-            <div class="dataUser">Membre</div>
-            <button class="boutonRole">Changer le rôle</button>
-            <button class="boutonDesactiver">Desactiver</button>
-        </div>   
-        <div class="rangeeUser">
-            <div class="dataUser">Gae</div>
-            <div class="dataUser">Tan</div>
-            <div class="dataUser">blabla@gmail.com</div>
-            <div class="dataUser">Membre</div>
-            <button class="boutonRole">Changer le rôle</button>
-            <button class="boutonDesactiver">Desactiver</button>
-        </div>   
-        <div class="rangeeUser">
-            <div class="dataUser">Gae</div>
-            <div class="dataUser">Tan</div>
-            <div class="dataUser">blabla@gmail.com</div>
-            <div class="dataUser">Membre</div>
-            <button class="boutonRole">Changer le rôle</button>
-            <button class="boutonDesactiver">Desactiver</button>
-        </div>   
-        <div class="rangeeUser">
-            <div class="dataUser">Gae</div>
-            <div class="dataUser">Tan</div>
-            <div class="dataUser">blabla@gmail.com</div>
-            <div class="dataUser">Membre</div>
-            <button class="boutonRole">Changer le rôle</button>
-            <button class="boutonDesactiver">Desactiver</button>
-        </div>   
-    </div>
+        <div class="listeUsers">
+            <div class="rangeeUser">
+                <div class="dataUser">Gae</div>
+                <div class="dataUser">Tan</div>
+                <div class="dataUser">blabla@gmail.com</div>
+                <div class="dataUser">Membre</div>
+                <button class="boutonRole">Changer le rôle</button>
+                <button class="boutonDesactiver">Desactiver</button>
+            </div>   
+            <div class="rangeeUser">
+                <div class="dataUser">Gae</div>
+                <div class="dataUser">Tan</div>
+                <div class="dataUser">blabla@gmail.com</div>
+                <div class="dataUser">Membre</div>
+                <button class="boutonRole">Changer le rôle</button>
+                <button class="boutonDesactiver">Desactiver</button>
+            </div>   
+            <div class="rangeeUser">
+                <div class="dataUser">Gae</div>
+                <div class="dataUser">Tan</div>
+                <div class="dataUser">blabla@gmail.com</div>
+                <div class="dataUser">Membre</div>
+                <button class="boutonRole">Changer le rôle</button>
+                <button class="boutonDesactiver">Desactiver</button>
+            </div>   
+            <div class="rangeeUser">
+                <div class="dataUser">Gae</div>
+                <div class="dataUser">Tan</div>
+                <div class="dataUser">blabla@gmail.com</div>
+                <div class="dataUser">Membre</div>
+                <button class="boutonRole">Changer le rôle</button>
+                <button class="boutonDesactiver">Desactiver</button>
+            </div>   
+        </div>
+    </main>
+    
     <%- include('partials/footer') %>
     <script src="/javascript/accessibility.js"></script>
     <script src="/javascript/adminUserGestion.js"></script>
