--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background: linear-gradient(90deg, #f2f2f2 0%, #0074d9 100%);
+    background: linear-gradient(90deg, #f2f2f2 0%, #e8ba8d 100%);
     color: #fff;
     text-align: center;
     padding: 32px;
